add crtsh, alienvault and fullhunt services grabbing

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,10 @@ task fatJar(type: Jar) {
 }
 
 dependencies {
+    // https://mvnrepository.com/artifact/org.json/json
+    implementation 'org.json:json:20211205'
+    // https://mvnrepository.com/artifact/org.jsoup/jsoup
+    implementation 'org.jsoup:jsoup:1.14.3'
     // https://mvnrepository.com/artifact/junit/junit
     testImplementation 'junit:junit:4.13.2'
     // https://mvnrepository.com/artifact/org.assertj/assertj-core
