--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,8 @@ plugins {
 
 group 'com.vampbear'
 version = '0.3.1'
+sourceCompatibility = 11
+targetCompatibility = 11
 
 repositories {
     mavenCentral()
